
syntax = "proto3";

package routeguide;
option csharp_namespace = "WFormsEx4ClientStreamingRpc";

service RouteGuide {

  // Client streaming RPC (client-to-server streaming RPC).
  // Accepts a stream of Points on a route being traversed, returning a
  // RouteSummary when traversal is completed.
  rpc RecordRoute(stream Point) returns (RouteSummary) {}

}

// Points are represented as latitude-longitude pairs
message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}


// A RouteSummary is received in response to a RecordRoute rpc.
message RouteSummary {
  // The number of points received.
  int32 point_count = 1;
  // The number of known features passed while traversing the route.
  int32 feature_count = 2;
  // The distance covered in metres.
  int32 distance = 3;
  // The duration of the traversal in seconds.
  int32 elapsed_time = 4;
}

// A feature names something at a given point.
message Feature {
  // The name of the feature.
  string name = 1;
  // The point where the feature is detected.
  Point location = 2;
}
